xt_platform/src/xssdtest.h

typedef struct spdk_nvme_qpair xt_qpair;
typedef struct timespec xt_timespec;
typedef struct _cmds_u cmds_u;
typedef struct _cmds_u_ring cmds_u_ring;
typedef struct _xt_buffer xt_buffer;
typedef struct _xt_io_qpair xt_io_qpair;
extern unsigned int xt_pcie_device_config_read32(xt_admin_qpair *aqinfo, unsigned int offset);
extern unsigned long long xt_pcie_device_config_read64(xt_admin_qpair *aqinfo, unsigned int offset);
extern void xt_pcie_device_config_write8(xt_admin_qpair *aqinfo, unsigned int offset, unsigned char value);
extern void xt_pcie_device_config_write16(xt_admin_qpair *aqinfo, unsigned int offset, unsigned short value);
extern void xt_pcie_device_config_write32(xt_admin_qpair *aqinfo, unsigned int offset, unsigned int value);
extern void xt_pcie_device_config_write64(xt_admin_qpair *aqinfo, unsigned int offset, unsigned long long value);
extern unsigned char xt_nvme_register_read8(xt_admin_qpair *aqinfo, unsigned int offset);
extern unsigned short xt_nvme_register_read16(xt_admin_qpair *aqinfo, unsigned int offset);
extern unsigned int xt_nvme_register_read32(xt_admin_qpair *aqinfo, unsigned int offset);
extern unsigned long long xt_nvme_register_read64(xt_admin_qpair *aqinfo, unsigned int offset);
extern void xt_nvme_register_write8(xt_admin_qpair *aqinfo, unsigned int offset, unsigned char value);
extern void xt_nvme_register_write16(xt_admin_qpair *aqinfo, unsigned int offset, unsigned short value);
extern void xt_nvme_register_write32(xt_admin_qpair *aqinfo, unsigned int offset, unsigned int value);
extern void xt_nvme_register_write64(xt_admin_qpair *aqinfo, unsigned int offset, unsigned long long value);
extern int xt_pcie_bar_map(xt_admin_qpair *aqinfo, unsigned int bir);
extern int xt_pcie_bar_unmap(xt_admin_qpair *aqinfo, unsigned int bir);
extern void xt_pcie_get_bar_data(xt_admin_qpair *aqinfo, void * bar_addr);
extern void print_latency_histogram(xt_admin_qpair *aqinfo, unsigned int latency_summary, unsigned int latency_histogram);
extern void xt_io_histogram_reset(xt_admin_qpair *aqinfo);
extern void xt_delay_us(unsigned int delay_us);
extern void xt_set_io_timespec_timeout(xt_io_qpair *qinfo, unsigned int timeout);
extern void xt_set_admin_timespec_timeout(xt_admin_qpair *aqinfo, unsigned int timeout);
extern void xt_log_set_print_level(int level);
extern unsigned long long get_total_read_size(void);
extern unsigned long long get_total_write_size(void);
extern unsigned long long get_total_iops_count(void);
extern unsigned long long get_total_io_size(void);