xt_platform/src/xt_memory.h

typedef union _xt_verify_tailer
{
    unsigned int raw[4];
    struct{
        unsigned long long slba;
        unsigned int buf_index : 28;
        unsigned int sub_buf_index : 4;
        unsigned int tailer_xor;
    };
} xt_verify_tailer;
typedef struct _xt_buffer{
    void * _raw_buf;
    void * buf;
    void * physic_buf;
    void * io_tracker;      /* buffer align is 4096 */
    void * _data_integrity_extension_raw;
    void * data_integrity_extension;
    void ** io_tracker_arrys;
    void ** _io_tracker_raw_buf_arrys;
    unsigned long long seed;
    unsigned long long buf_crc512[XT_BUFFER_IO_TAILER_COUNT];
    unsigned long long buf_crc4096;
    unsigned int buf_length;
    unsigned int buf_align;
    unsigned int buf_type;      /* 1 write buffer; 2 read buffer; 3 trim buffer; 4 admin buffer; 0 and other TBD */
    unsigned int alloc_type;    /* 1 mem alloc; 2 spdk malloc; 3 CMB; 4 cuda; 5 mem share; 0 and other TBD*/
    unsigned int pi_type;       /* 0 no meta data; 1 dif; 2 dix*/
    unsigned int sector_size;   /* 512 or 4096 */
    unsigned int meta_sector_size; 
    unsigned int buf_index : 28;
    unsigned int sub_buf_index : 4;
    unsigned int buf_change;
    unsigned int buf_status;
    unsigned int io_tracker_length;
    xt_verify_tailer io_tailers[XT_BUFFER_IO_TAILER_COUNT];
    pthread_mutex_t buffer_lock;
} xt_buffer;