xt_platform/xt_interface.pxd


    unsigned int xt_pcie_device_config_read32(xt_admin_qpair *aqinfo, unsigned int offset)

    unsigned long long xt_pcie_device_config_read64(xt_admin_qpair *aqinfo, unsigned int offset)

    void xt_pcie_device_config_write8(xt_admin_qpair *aqinfo, unsigned int offset, unsigned char value)

    void xt_pcie_device_config_write16(xt_admin_qpair *aqinfo, unsigned int offset, unsigned short value)

    void xt_pcie_device_config_write32(xt_admin_qpair *aqinfo, unsigned int offset, unsigned int value)

    void xt_pcie_device_config_write64(xt_admin_qpair *aqinfo, unsigned int offset, unsigned long long value)

    unsigned char xt_nvme_register_read8(xt_admin_qpair *aqinfo, unsigned int offset)

    unsigned short xt_nvme_register_read16(xt_admin_qpair *aqinfo, unsigned int offset)

    unsigned int xt_nvme_register_read32(xt_admin_qpair *aqinfo, unsigned int offset)

    unsigned long long xt_nvme_register_read64(xt_admin_qpair *aqinfo, unsigned int offset)

    void xt_nvme_register_write8(xt_admin_qpair *aqinfo, unsigned int offset, unsigned char value)

    void xt_nvme_register_write16(xt_admin_qpair *aqinfo, unsigned int offset, unsigned short value)

    void xt_nvme_register_write32(xt_admin_qpair *aqinfo, unsigned int offset, unsigned int value)

    void xt_nvme_register_write64(xt_admin_qpair *aqinfo, unsigned int offset, unsigned long long value)

    int xt_pcie_bar_map(xt_admin_qpair *aqinfo, unsigned int bir)

    int xt_pcie_bar_unmap(xt_admin_qpair *aqinfo, unsigned int bir)

    int xt_pcie_get_bar_data(xt_admin_qpair *aqinfo, void * bar_addr)

    void print_latency_histogram(xt_admin_qpair *aqinfo, unsigned int latency_summary, unsigned int latency_histogram)

    void xt_io_histogram_reset(xt_admin_qpair *aqinfo)

    void xt_delay_us(unsigned int delay_us)

    void xt_set_io_timespec_timeout(xt_io_qpair *qinfo, unsigned int timeout)

    void xt_set_admin_timespec_timeout(xt_admin_qpair *aqinfo, unsigned int timeout)

    void xt_log_set_print_level(int level)

    unsigned long long get_total_read_size()

    unsigned long long get_total_write_size()

    unsigned long long get_total_iops_count()

    unsigned long long get_total_io_size()

    char * get_engine_names()

    unsigned int reload_engine_check(const char *src_engine, const char *dest_engine)

cdef extern from "./src/xt_io_qpair.h":

    ctypedef struct io_context_t:
        pass

    ctypedef struct io_event:
        pass

    ctypedef struct xt_io_qpair:
        xt_qpair *qpair
        xt_admin_qpair * aqinfo
        unsigned int qpair_id
        int reap_type
        unsigned int io_check_type
        unsigned int current_iodepth_count
        unsigned int qpair_iodepth
        unsigned long long timeout
        unsigned long long last_tick_recover
        unsigned long long completed_check_index
        unsigned long long qpair_completions
        unsigned long long submit_count
        unsigned long long last_submit_count
        unsigned long long limit_iops_count
        unsigned long long last_second_iops_count
        unsigned long long limit_io_count
        unsigned long long last_second_total_io_count
        unsigned long long last_second_total_tick
        unsigned int microseconds_delay
        cmds_u * io_units
        cmds_u_ring * completed_cmds_u_ring
        cmds_u_ring * submit_cmds_u_ring     # recover submit io info
        unsigned long long io_u_submit_map[8]
        unsigned long long io_u_complete_map[8]


        xt_buffer ** write_buf_addr_list
        xt_lcg_random * io_lcg
        xt_lcg_random * write_lcg
        xt_lcg_random * read_lcg

        int fid
        unsigned int nsid
        xt_timespec spec_timeout
        io_context_t aio_ctx
        io_event *aio_events
        xt_iocb **iocbs
        void (* wait_submit_command_function) (void *)
        void * wait_submit_command_args


    void xt_io_qpair_init(xt_io_qpair *qinfo, unsigned int qpair_iodepth, cmds_u * io_units, cmds_u_ring * completed_cmds_u_ring,
                          unsigned long long completed_check_index, unsigned long long submit_count, unsigned long long qpair_completions)

    void xt_set_io_qpair_polling_status(xt_io_qpair *qinfo, xt_admin_qpair * aqinfo, int reap_type, unsigned int io_check_type,
                                        unsigned int current_iodepth_count, unsigned long long timeout, unsigned long long limit_iops_count,
                                        unsigned long long limit_io_count, unsigned int microseconds_delay)

    void xt_io_qpair_lcg_init(xt_io_qpair *qinfo, unsigned int x0, unsigned long long m_modulus, unsigned long long c_increment,
                              unsigned long long a_multiplier, unsigned long long offset, unsigned long long max_value,
                              unsigned int step, unsigned int lcg_type)

    void xt_io_qpair_lcg_fini(xt_io_qpair *qinfo)
    void xt_char_device_info_init(xt_admin_qpair * aqinfo, const char * char_device_name, unsigned int size, unsigned int nsid_count)

    void xt_char_device_update_info(xt_admin_qpair * aqinfo, const char * char_device_name, unsigned int size)

    void xt_update_ctrl_data(xt_admin_qpair * aqinfo, void * ctrl_data)

    unsigned int xt_get_mdts(xt_admin_qpair * aqinfo)

    void xt_update_ns_data(xt_admin_qpair * aqinfo, void * ns_data, unsigned int nsid)

    unsigned int xt_get_ns_sector_size(xt_admin_qpair * aqinfo, unsigned int nsid)

    unsigned int xt_get_ns_meta_data_size(xt_admin_qpair * aqinfo, unsigned int nsid)

    void xt_block_device_update_info(xt_admin_qpair * aqinfo, const char * block_device_name, unsigned int size, unsigned int nsid, unsigned int clear_next_open_index)

    int xt_device_open(xt_admin_qpair * aqinfo, char * path, unsigned int nsid)

    void xt_device_close(xt_admin_qpair * aqinfo)

    void xt_char_device_info_fini(xt_admin_qpair * aqinfo)

    void xt_io_qpair_reset(xt_io_qpair *qinfo, unsigned long long qpair_completions, unsigned long long submit_count,
                           unsigned long long completed_check_index)

    void xt_io_qpair_timeout(xt_io_qpair *qinfo, unsigned long long timeout)

    int xt_check_qpair_completioned(xt_io_qpair *qinfo)

    unsigned long long xt_io_qpair_get_qpair_completions(xt_io_qpair *qinfo)

    void xt_io_qpair_reset_qpair_completions(xt_io_qpair *qinfo)

    void xt_io_qpair_init_write_buffer_addr_list(xt_io_qpair *qinfo, xt_buffer ** write_buf_addr_list)

    unsigned int xt_get_io_qpair_id(xt_io_qpair *qinfo)

    cmds_u_ring * xt_io_qpair_get_completed_cmds_u_ring(xt_io_qpair *qinfo)

    void xt_dump_io_unit(xt_io_qpair *qinfo)